log
Thu 09 May 2024 05:42:54 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
6da4d7f
Thu 09 May 2024 07:29:41 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
b58a15c
Thu 09 May 2024 07:34:53 PM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:52:14: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   52 |   TreeNode * parent = NULL;
      |              ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
bc5d426
Thu 09 May 2024 07:43:56 PM UTC: 
 treemap.c | 17 ++++++++++++-----
 1 file changed, 12 insertions(+), 5 deletions(-)
 tests:  5|7
total_score: 5/70
0e85fde
Thu 09 May 2024 07:55:12 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|7
total_score: 5/70
124b64b
Thu 09 May 2024 07:59:53 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
5b723ee
Thu 09 May 2024 08:11:50 PM UTC: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:100:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
  100 |     TreeNode * parent = NULL;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
6b88242
Thu 09 May 2024 08:12:24 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
db49584
Thu 09 May 2024 08:14:36 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|6
total_score: 15/70
3e20f2d
Thu 09 May 2024 08:15:03 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|5
total_score: 25/70
70a867b
Thu 09 May 2024 08:18:07 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
930577f
Thu 09 May 2024 08:20:39 PM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 30/70
1c52cd8
Sun 12 May 2024 01:52:14 AM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  17|3
total_score: 30/70
50e3748
